fixed overflowing 'app_main_container' on mobile

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
 
 body {
     font-size: 100%;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
